Bug Squash Anterior: 9 faltando

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -26,8 +26,8 @@ body {
   -webkit-text-stroke: 1px black;
   font-size: 3em;
   color: white;
-  text-shadow: 3px 3px 0 black , -1px -1px 0 black , 
-    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black , 1px -1px 0 black ,
+    -1px 1px 0 black , 1px 1px 0 black;
 }
 
 .centralizar {
@@ -47,7 +47,7 @@ body {
   font-weight: 700;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow: 3px 3px 0 black , -1px -1px 0 black , 
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
     1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
 
@@ -111,6 +111,5 @@ body {
   font-size: 2em;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow: 3px 3px 0 black , -1px -1px 0 black , 
-    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black , 1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
